libs/modkit/tests/ui/no_handler.stderr
error[E0599]: no method named `register` found for struct `OperationBuilder<Missing, Present, ()>` in the current scope
  --> tests/ui/no_handler.rs:21:10
   |
18 |       let _ = OperationBuilder::<_, _, ()>::get("/test")
   |  _____________-
19 | |         .summary("Test endpoint")
20 | |         .json_response(200, "Success")
21 | |         .register(router, &registry);
   | |         -^^^^^^^^ method not found in `OperationBuilder<Missing, Present, ()>`
   | |_________|
   |
   |
   = note: the method was found for
           - `OperationBuilder<Present, Present, S>`
